🐛 fix button wrap

--- a/src/components/Button/index.scss
+++ b/src/components/Button/index.scss
@@ -8,6 +8,7 @@
   border: none;
   font-size: $font-size-normal;
   border-radius: 4px;
+  white-space: nowrap;
 }
 
 .primary {
